# interoperability-messaging-lab

./: .dockerignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  gen-vmf-sample.yml
data/pcaps/: example_capture.pcap.txt
data/samples/: sample_cot.xml  sample_stanag.bin.txt  sample_vmf.bin.txt
schema/: normalized_message.schema.json
scripts/: quality_check.py
src/: __init__.py  cli.py
src/api/: __init__.py  app.py  middleware.py  models.py  services.py
src/binutils/: pcap_extract.py
src/parsers/: cot_parser.py  vmf_parser.py
src/stream/: pub.py  sub.py
src/transforms/: exporters.py  normalize_schema.py  to_json.py  validate.py
tests/: conftest.py  test_api.py  test_cot_parser.py  test_exporters.py  test_pcap_decode.py  test_schema_validation.py  test_streaming.py  test_vmf_parser.py
tools/: make_pcap_sample.py  make_vmf_sample.py
